# bequant-lowlatency-bayesian-regressor

./: .gitignore  CMakeLists.txt  data.py  main.cpp
include/: ColumnView.hpp  LinearAlgebra.hpp  Matrix.hpp  OLS.hpp  Regression.hpp
src/: ColumnView.cpp  LinearAlgebra.cpp  Matrix.cpp  OLS.cpp  Regression.cpp
